[package]
name = "assets_manager"
version = "0.8.4"
authors = ["Benoît du Garreau"]
edition = "2021"
rust-version = "1.58"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Conveniently load, cache, and reload external resources"

repository = "https://github.com/a1phyr/assets_manager"
documentation = "https://docs.rs/assets_manager"

categories = ["caching", "filesystem", "game-development"]
keywords = ["asset", "assets", "cache", "hot-reloading", "resources"]


[features]
default = ["ahash", "parking_lot"]

hot-reloading = ["notify", "crossbeam-channel"]
embedded = ["assets_manager_macros"]

zip = ["_zip", "sync_file"]
zip-bzip2 = ["zip", "_zip/bzip2"]
zip-deflate = ["zip", "_zip/deflate"]

bincode = ["serde_bincode", "serde"]
json = ["serde_json", "serde"]
msgpack = ["serde_msgpack", "serde"]
ron = ["serde_ron", "serde"]
yaml = ["serde_yaml", "serde"]
toml = ["serde_toml", "serde"]

flac = ["rodio/flac"]
mp3 = ["rodio/mp3"]
vorbis = ["rodio/vorbis"]
wav = ["rodio/wav"]

bmp = ["image/bmp"]
jpeg = ["image/jpeg"]
png = ["image/png"]
webp = ["image/webp"]

gltf = ["_gltf", "base64", "png", "jpeg"]

[dependencies]
log = {version = "0.4"}

assets_manager_macros = {path = "macros", version = "0.2", optional = true}

ahash = {version = "0.8.0", default-features = false, features = ["runtime-rng"], optional = true}
parking_lot = {version = "0.12", optional = true}

notify = {version = "5.0", optional = true}
crossbeam-channel = {version = "0.5", optional = true}

_zip = {version = "0.6", package = "zip", default-features = false, optional = true}
sync_file = {version = "0.2", optional = true}

serde = {version = "1.0", optional = true, features = ["derive"]}
serde_bincode = {version = "1.2", package = "bincode", optional = true}
serde_json = {version = "1.0", optional = true}
serde_msgpack = {version = "1.1", package = "rmp-serde", optional = true}
serde_ron = {version = "0.8", package = "ron", optional = true}
serde_toml = {version = "0.5", package = "toml", optional = true}
serde_yaml = {version = "0.9.1", optional = true}

rodio = {version = "0.15", default-features = false, optional = true}
image = {version = "0.24", default-features = false, optional = true}
ab_glyph = {version = "0.2.12", optional = true}

_gltf = {version = "1.0", package = "gltf", default-features = false, optional = true}
base64 = {version = "0.13", optional = true}

[dev-dependencies]
cfg-if = "1.0"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
env_logger = "0.9"

[[example]]
name = "basic"
required-features = ["ron"]

[[example]]
name = "hot_reloading"
required-features = ["hot-reloading"]

[[example]]
name = "compound"
required-features = ["hot-reloading", "ron"]

[[example]]
name = "custom-source"


[workspace]
members = [".", "macros"]

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
