[package]
name = "assets_manager"
version = "0.10.2"
authors = ["Benoît du Garreau"]
edition = "2021"
rust-version = "1.61"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Conveniently load, cache, and reload external resources"

repository = "https://github.com/a1phyr/assets_manager"
documentation = "https://docs.rs/assets_manager"

categories = ["caching", "filesystem", "game-development"]
keywords = ["asset", "assets", "cache", "hot-reloading", "resources"]


[features]
default = ["ahash", "parking_lot"]

hot-reloading = ["dep:notify", "dep:crossbeam-channel"]
embedded = ["dep:assets_manager_macros"]
utils = ["dep:once_cell"]

zip = ["dep:zip", "dep:sync_file"]
zip-bzip2 = ["zip", "zip/bzip2"]
zip-deflate = ["zip", "zip/deflate"]

bincode = ["dep:bincode", "serde"]
json = ["dep:serde_json", "serde"]
msgpack = ["dep:rmp-serde", "serde"]
ron = ["dep:ron", "serde"]
yaml = ["dep:serde_yaml", "serde"]
toml = ["dep:toml_edit", "serde"]

flac = ["rodio/flac"]
mp3 = ["rodio/minimp3"]
vorbis = ["rodio/vorbis"]
wav = ["rodio/wav"]

bmp = ["image/bmp"]
jpeg = ["image/jpeg"]
png = ["image/png"]
webp = ["image/webp"]

gltf = ["dep:gltf", "dep:base64", "png", "jpeg"]


[dependencies]
log = { version = "0.4" }
once_cell = { version = "1.16", optional = true }

assets_manager_macros = { path = "macros", version = "0.2", optional = true }

ahash = { version = "0.8.0", optional = true, default-features = false, features = ["runtime-rng"] }
parking_lot = { version = "0.12", optional = true }

notify = { version = "6.0", optional = true }
crossbeam-channel = { version = "0.5", optional = true }

zip = { version = "0.6", optional = true, default-features = false }
sync_file = { version = "0.2", optional = true }

serde = { version = "1.0", optional = true, features = ["derive"] }
bincode = { version = "1.2", optional = true }
serde_json = { version = "1.0", optional = true }
rmp-serde = { version = "1.1", optional = true }
ron = { version = "0.8", optional = true }
toml_edit = { version = "0.19", optional = true, features = ["serde"] }
serde_yaml = { version = "0.9.1", optional = true }

rodio = { version = "0.17", optional = true, default-features = false }
image = { version = "0.24", optional = true, default-features = false }
ab_glyph = { version = "0.2.12", optional = true }

gltf = { version = "1.0", optional = true, default-features = false }
base64 = { version = "0.21", optional = true }


[dev-dependencies]
cfg-if = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10"


[[example]]
name = "basic"
required-features = ["ron"]

[[example]]
name = "hot_reloading"
required-features = ["hot-reloading"]

[[example]]
name = "compound"
required-features = ["hot-reloading", "ron"]

[[example]]
name = "custom-source"


[workspace]
members = [".", "crates/kira", "macros"]


[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
