[package]
name = "assets_manager"
version = "0.13.8"
authors = ["Benoît du Garreau"]
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Conveniently load, cache, and reload external resources"

repository = "https://github.com/a1phyr/assets_manager"
documentation = "https://docs.rs/assets_manager"

categories = ["caching", "filesystem", "game-development"]
keywords = ["asset", "assets", "cache", "hot-reloading", "resources"]

exclude = ["/assets/"]


[features]
default = ["faster-hash"]

faster-hash = ["dep:foldhash"]
image = ["dep:image"]

hot-reloading = ["dep:notify", "dep:crossbeam-channel"]
macros = ["dep:assets_manager_macros"]
embedded = ["macros"]
utils = ["dep:once_cell"]
mmap = ["dep:memmap2"]

zip = ["dep:eazip", "dep:crc32fast", "dep:sync_file"]
zip-deflate = ["zip", "eazip/deflate"]
zip-zstd = ["zip", "eazip/zstd"]
tar = ["dep:tar", "dep:sync_file"]

serde = ["dep:serde_core"]
bincode = ["dep:bincode", "serde"]
json = ["dep:serde_json", "serde"]
msgpack = ["dep:rmp-serde", "serde"]
ron = ["dep:ron", "serde"]
yaml = ["dep:serde_yaml", "serde"]
toml = ["dep:toml", "serde"]

bmp = ["image/bmp"]
jpeg = ["image/jpeg"]
png = ["image/png"]
webp = ["image/webp"]

gltf = ["dep:gltf", "dep:base64", "png", "jpeg"]


[dependencies]
log = { version = "0.4" }
once_cell = { version = "1.16", optional = true }
memmap2 = { version = "0.9.4", optional = true }

assets_manager_macros = { path = "macros", version = "0.3.1", optional = true }

foldhash = { version = "0.2.0", optional = true }
parking_lot = { version = "0.12", optional = true }
hashbrown = { version = ">=0.15,<0.17", default-features = false }

notify = { version = "8.0", optional = true }
crossbeam-channel = { version = "0.5", optional = true }

eazip = { version = "0.2.1", optional = true, default-features = true, features = ["std"] }
crc32fast = { version = "1.4.2", optional = true }
tar = { version = "0.4.38", default-features = false, optional = true }
sync_file = { version = "0.3", optional = true }

serde_core = { version = "1.0", optional = true }
toml = { version = "1.0", optional = true }
bincode = { version = "2", optional = true, features = ["serde"] }
serde_json = { version = "1.0", optional = true }
rmp-serde = { version = "1.1", optional = true }
ron = { version = "0.12", optional = true }
serde_yaml = { version = "0.9.1", optional = true }

image = { version = "0.25", optional = true, default-features = false }
ab_glyph = { version = "0.2.12", optional = true }

gltf = { version = "1.0", optional = true, default-features = false }
base64 = { version = "0.22", optional = true }


[dev-dependencies]
cfg-if = "1.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"


[[example]]
name = "basic"
required-features = ["ron", "macros"]

[[example]]
name = "hot_reloading"
required-features = ["hot-reloading"]

[[example]]
name = "compound"
required-features = ["hot-reloading", "ron"]

[[example]]
name = "custom-source"


[workspace]
members = [".", "crates/kira", "crates/rodio", "macros"]


[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
