[package]
name = "assets_manager_macros"
version = "0.2.0"
authors = ["Benoît du Garreau"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "../README.md"
description= "Procedural macros for assets_manager"

repository = "https://github.com/a1phyr/assets_manager"
documentation = "https://docs.rs/assets_manager"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", default-features = false, features = ["parsing", "proc-macro"]}
