[package]
name = "assets_manager-rodio"
version = "0.7.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "`rodio` support for `assets_manager`"

repository = "https://github.com/a1phyr/assets_manager/tree/master/crates/rodio"
documentation = "https://docs.rs/assets_manager-rodio"

categories = ["caching", "game-development", "multimedia::audio"]
keywords = ["assets", "audio", "cache", "hot-reloading", "rodio"]


[features]
flac = ["rodio/flac"]
mp3 = ["rodio/mp3"]
vorbis = ["rodio/vorbis"]
wav = ["rodio/wav"]

hound = ["rodio/hound"]
claxon = ["rodio/claxon"]
minimp3 = ["rodio/minimp3"]
lewton = ["rodio/lewton"]

[dependencies]
assets_manager = { version = "0.13", default-features = false, path = "../.." }
rodio = { version = "0.22", default-features = false }
